--- a/webgear-benchmarks/webgear-benchmarks.cabal
+++ b/webgear-benchmarks/webgear-benchmarks.cabal
@@ -1,12 +1,12 @@
 cabal-version:       2.4
 name:                webgear-benchmarks
-version:             1.1.0
+version:             1.1.1
 description:         Benchmarks for webgear
 homepage:            https://github.com/haskell-webgear/webgear-benchmarks#readme
 bug-reports:         https://github.com/haskell-webgear/webgear-benchmarks/issues
 author:              Raghu Kaippully
 maintainer:          rkaippully@gmail.com
-copyright:           2020-2022 Raghu Kaippully
+copyright:           2020-2024 Raghu Kaippully
 license:             MPL-2.0
 license-file:        LICENSE
 build-type:          Simple
@@ -24,7 +24,7 @@ executable users
                     , bytestring >=0.10 && <0.13
                     , criterion >=1.5.0.0 && <1.7
                     , hashable >=1.3 && <1.5
-                    , http-types ==0.12.3
+                    , http-types ==0.12.*
                     , mtl >=2.2.2 && <2.4
                     , text >=1.2.0.0 && <2.2
                     , time
@@ -32,8 +32,8 @@ executable users
                     , servant ==0.20.1
                     , servant-server ==0.20
                     , scotty ==0.20.1
-                    , wai ==3.2.3
-                    , webgear-server ==1.1.0
+                    , wai ==3.2.*
+                    , webgear-server ==1.1.1
   default-extensions: Arrows
                       ConstraintKinds
                       DataKinds
