--- a/webgear-swagger-ui/webgear-swagger-ui.cabal
+++ b/webgear-swagger-ui/webgear-swagger-ui.cabal
@@ -1,7 +1,7 @@
 cabal-version:       2.4
 
 name:                webgear-swagger-ui
-version:             1.1.0
+version:             1.1.1
 synopsis:            Host swagger UI based on WebGear API specifications.
 description:
     WebGear is a library to for building composable, type-safe HTTP API servers.
@@ -11,7 +11,7 @@ homepage:            https://github.com/haskell-webgear/webgear#readme
 bug-reports:         https://github.com/haskell-webgear/webgear/issues
 author:              Raghu Kaippully
 maintainer:          rkaippully@gmail.com
-copyright:           2023 Raghu Kaippully
+copyright:           2023-2024 Raghu Kaippully
 license:             MPL-2.0
 license-file:        LICENSE
 category:            Web
@@ -55,7 +55,7 @@ library
                     , http-types ==0.12.*
                     , mime-types ==0.1.*
                     , text >=1.2.0.0 && <2.2
-                    , webgear-core ==1.1.0
+                    , webgear-core ^>=1.1.1
   default-extensions: Arrows
                       DataKinds
                       FlexibleContexts
