--- a/webgear-swagger-ui/webgear-swagger-ui.cabal
+++ b/webgear-swagger-ui/webgear-swagger-ui.cabal
@@ -55,6 +55,7 @@ library
                     , http-types ==0.12.*
                     , mime-types ==0.1.*
                     , text >=1.2.0.0 && <2.2
+                    , wai-app-static ==3.1.*
                     , webgear-core ^>=1.1.1
   default-extensions: Arrows
                       DataKinds
