Fix hackage upload script
- Use a shell with minimal set of dependencies for hackage upload
- Use `find` instead of `ls` to select packages. This avoids
  `webgear-swagger-*` matching `webgear-swagger-ui-*`.
- Added delay between package and doc uploads. Hopefully this will fix
  some 404 errors in doc upload.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,4 +31,4 @@ jobs:
 
       - name: Upload to Hackage
         run: |
-          nix develop --command ./scripts/hackage-upload.sh ${{ secrets.HACKAGE_TOKEN }}
+          nix develop .#webgear-hackage-upload-shell --command ./scripts/hackage-upload.sh ${{ secrets.HACKAGE_TOKEN }}
