--- a/webgear-openapi/webgear-openapi.cabal
+++ b/webgear-openapi/webgear-openapi.cabal
@@ -75,6 +75,7 @@ library
                     , http-types ==0.12.*
                     , insert-ordered-containers ==0.2.*
                     , lens >=4.18.1 && <5.3
+                    , mtl >=2.2 && <2.4
                     , openapi3 >=3.1.0 && <3.3
                     , text >=1.2.0.0 && <2.2
                     , webgear-core ^>=1.2.0
