--- a/webgear-swagger/webgear-swagger.cabal
+++ b/webgear-swagger/webgear-swagger.cabal
@@ -73,6 +73,7 @@ library
                     , http-types ==0.12.*
                     , insert-ordered-containers ==0.2.*
                     , lens >=4.18.1 && <5.3
+                    , mtl >=2.2 && <2.4
                     , swagger2 >=2.6 && <2.9
                     , text >=1.2.0.0 && <2.2
                     , webgear-core ^>=1.2.0
