--- a/webgear-core/webgear-core.cabal
+++ b/webgear-core/webgear-core.cabal
@@ -61,7 +61,7 @@ common webgear-common
                     , http-api-data >=0.4.2 && <0.7
                     , http-media ==0.8.*
                     , http-types ==0.12.*
-                    , network ==3.1.*
+                    , network >=3.1.0 && <3.3
                     , tagged ==0.8.*
                     , template-haskell >=2.15.0.0 && <2.22
                     , text >=1.2.0.0 && <2.2
