--- a/webgear-benchmarks/webgear-benchmarks.cabal
+++ b/webgear-benchmarks/webgear-benchmarks.cabal
@@ -19,15 +19,15 @@ source-repository head
 
 executable users
   default-language:   Haskell2010
-  build-depends:      aeson >=1.5 && <2.3
-                    , base >=4.14.0.0 && <5
-                    , bytestring >=0.10 && <0.13
-                    , criterion >=1.5.0.0 && <1.7
-                    , hashable >=1.3 && <1.6
+  build-depends:      aeson >=2.1 && <2.3
+                    , base >=4.17.0.0 && <4.22
+                    , bytestring >=0.11 && <0.13
+                    , criterion >=1.6.1.0 && <1.7
+                    , hashable >=1.4 && <1.6
                     , http-types ==0.12.*
                     , mtl >=2.2.2 && <2.4
-                    , text >=1.2.0.0 && <2.2
-                    , time
+                    , text >=2.0 && <2.2
+                    , time >=1.12 && <1.15
                     , unordered-containers ==0.2.*
                     , servant ==0.20.2
                     , servant-server ==0.20.2
@@ -56,19 +56,19 @@ executable users
                     , Servant
                     , Scotty
   ghc-options:        -O2
-                      -threaded
-                      -rtsopts
                       -Wall
-                      -Wno-unticked-promoted-constructors
                       -Wcompat
+                      -Werror
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
+                      -Wmissing-deriving-strategies
                       -Wmissing-fields
                       -Wmissing-home-modules
-                      -Wmissing-deriving-strategies
+                      -Wno-unticked-promoted-constructors
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wunused-packages
-                      -Werror
                       -fshow-warning-groups
+                      -rtsopts
+                      -threaded
