--- a/webgear-example-realworld/webgear-example-realworld.cabal
+++ b/webgear-example-realworld/webgear-example-realworld.cabal
@@ -40,8 +40,8 @@ executable realworld
                     , wai
                     , wai-app-static
                     , warp
-                    , webgear-server
                     , webgear-openapi
+                    , webgear-server
                     , webgear-swagger-ui
   default-extensions: Arrows
                       BlockArguments
@@ -63,23 +63,23 @@ executable realworld
                       ScopedTypeVariables
                       TypeApplications
                       TypeOperators
-  ghc-options:        -threaded
-                      -rtsopts
-                      -with-rtsopts=-N
-                      -Wall
-                      -Wno-unticked-promoted-constructors
+  ghc-options:        -Wall
                       -Wcompat
+                      -Werror
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
+                      -Wmissing-deriving-strategies
                       -Wmissing-fields
                       -Wmissing-home-modules
-                      -Wmissing-deriving-strategies
+                      -Wno-unticked-promoted-constructors
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wunused-packages
-                      -Werror
                       -fshow-warning-groups
+                      -rtsopts
+                      -threaded
+                      -with-rtsopts=-N
   hs-source-dirs:     src
   main-is:            Main.hs
   other-modules:      API.Article
