--- a/webgear-server/webgear-server.cabal
+++ b/webgear-server/webgear-server.cabal
@@ -42,8 +42,8 @@ common webgear-common
                       LambdaCase
                       MultiParamTypeClasses
                       NamedFieldPuns
-                      OverloadedStrings
                       OverloadedLists
+                      OverloadedStrings
                       PolyKinds
                       RankNTypes
                       RecordWildCards
@@ -53,29 +53,27 @@ common webgear-common
                       TypeApplications
                       TypeFamilies
                       TypeOperators
-  build-depends:      base >=4.13.0.0 && <4.22
-                    , base64-bytestring >=1.0.0.3 && <1.3
-                    , bytestring >=0.10.10.1 && <0.13
+  build-depends:      base >=4.17.0.0 && <4.22
+                    , base64-bytestring >=1.2.1.0 && <1.3
+                    , bytestring >=0.11.0.0 && <0.13
                     , http-types ==0.12.*
-                    , text >=1.2.0.0 && <2.2
+                    , text >=2.0 && <2.2
                     , wai ==3.2.*
                     , webgear-core ^>=1.3.1
   ghc-options:        -Wall
-                      -Wno-unticked-promoted-constructors
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
+                      -Wmissing-deriving-strategies
                       -Wmissing-fields
                       -Wmissing-home-modules
-                      -Wmissing-deriving-strategies
+                      -Wno-unticked-promoted-constructors
                       -Wpartial-fields
                       -Wredundant-constraints
+                      -Wunused-packages
                       -fshow-warning-groups
 
-  if impl(ghc >= 8.10)
-    ghc-options:      -Wunused-packages
-                      
 library
   import:             webgear-common
   exposed-modules:    WebGear.Server
@@ -94,14 +92,14 @@ library
   other-modules:      Paths_webgear_server
   autogen-modules:    Paths_webgear_server
   hs-source-dirs:     src
-  build-depends:      aeson >=1.4 && <1.6 || >=2.0 && <2.3
+  build-depends:      aeson >=2.1 && <2.3
                     , arrows ==0.4.*
                     , binary >= 0.8.0.0 && <0.9
                     , cookie >=0.4.5 && <0.6
-                    , http-api-data >=0.4.2 && <0.7
+                    , http-api-data >=0.5 && <0.7
                     , http-media ==0.8.*
-                    , jose >=0.8.3.1 && <0.12
-                    , monad-time >=0.3.0.0 && <0.5
+                    , jose >=0.10 && <0.12
+                    , monad-time >=0.4.0.0 && <0.5
                     , mtl >=2.2 && <2.4
                     , resourcet >=1.2 && <1.4
                     , text-conversions ==0.3.*
@@ -126,9 +124,9 @@ test-suite webgear-server-test
   ghc-options:        -threaded
                       -rtsopts
                       -with-rtsopts=-N
-  build-depends:      QuickCheck >=2.13 && <2.16
+  build-depends:      QuickCheck >=2.14 && <2.16
                     , quickcheck-instances ==0.3.*
-                    , tasty >=1.2 && <1.6
+                    , tasty >=1.4 && <1.6
                     , tasty-hunit ==0.10.*
                     , tasty-quickcheck >=0.10 && <0.12
                     , webgear-server
