--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,7 +63,7 @@ jobs:
         run: |
           GHC_VERSION=$(echo ${{ matrix.ghc }} | tr -d .)
           BENCHMARK=$(nix build --no-link --json .#webgear-benchmarks-ghc${GHC_VERSION} | jq -r .[].outputs.out)
-          ${BENCHMARK}/bin/users +RTS -N -RTS
+          ${BENCHMARK}/bin/benchmarks +RTS -N -RTS
 
   stack-build:
     name: Stack
